WebCore/bindings/v8/ScriptCallStack.h
@@ -42,26 +42,48 @@ namespace v8 {
 
 namespace WebCore {
 
-    class ScriptCallStack : public Noncopyable {
-    public:
-        static ScriptCallStack* create(const v8::Arguments&, unsigned skipArgumentCount = 0);
-        ~ScriptCallStack();
+class ScriptCallStack : public Noncopyable {
+public:
+    static ScriptCallStack* create(const v8::Arguments&, unsigned skipArgumentCount = 0);
+    ~ScriptCallStack();
 
-        static bool callLocation(String* sourceName, int* sourceLineNumber, String* functionName);
+    static bool callLocation(String* sourceName, int* sourceLineNumber, String* functionName);
 
-        const ScriptCallFrame& at(unsigned) const;
-        // FIXME: implement retrieving and storing call stack trace
-        unsigned size() const { return 1; }
+    const ScriptCallFrame& at(unsigned) const;
+    // FIXME: implement retrieving and storing call stack trace
+    unsigned size() const { return 1; }
 
-        ScriptState* state() const { return m_scriptState; }
-        ScriptState* globalState() const { return m_scriptState; }
+    ScriptState* state() const { return m_scriptState; }
+    ScriptState* globalState() const { return m_scriptState; }
 
-    private:
-        ScriptCallStack(const v8::Arguments& arguments, unsigned skipArgumentCount, String sourceName, int sourceLineNumber, String funcName);
-    
-        ScriptCallFrame m_lastCaller;
-        ScriptState* m_scriptState;
-    };
+private:
+    ScriptCallStack(const v8::Arguments& arguments, unsigned skipArgumentCount, String sourceName, int sourceLineNumber, String funcName);
+
+    // Function for retrieving the source name, line number and function name for the top
+    // JavaScript stack frame.
+    //
+    // It will return true if the caller information was successfully retrieved and written
+    // into the function parameters, otherwise the function will return false. It may
+    // fail due to a stack overflow in the underlying JavaScript implementation, handling
+    // of such exception is up to the caller.
+    static bool topStackFrame(String& sourceName, int& lineNumber, String& functionName);
+
+    static void createUtilityContext();
+
+     // Returns a local handle of the utility context.
+    static v8::Local<v8::Context> utilityContext()
+    {
+      if (s_utilityContext.IsEmpty())
+          createUtilityContext();
+      return v8::Local<v8::Context>::New(s_utilityContext);
+    }
+
+    ScriptCallFrame m_lastCaller;
+    ScriptState* m_scriptState;
+
+    // Utility context holding JavaScript functions used internally.
+    static v8::Persistent<v8::Context> s_utilityContext;
+};
 
 } // namespace WebCore
 
